# andresfp14.github.io

./: .gitignore  .nojekyll  CONTENT_INVENTORY.md  README.md  _quarto-en.yml  _quarto-es.yml  _quarto.yml  about.html  contact.qmd  experience.qmd  index.html  index.qmd  publications.bib  pyproject.toml  search.json  teaching.qmd
.github/workflows/: publish.yml
blog/: index.qmd
config/_default/: hugo.yaml  params.yaml
content/: _index.md
content/publication/: _index.md
en/: experience.qmd  index.qmd
es/: _metadata.yml  experience.qmd  index.qmd  teaching.qmd
es/blog/: index.qmd
es/projects/: index.qmd
es/publications/: behery-2023-actionable.qmd  bragantini-2021-neuralnetworkbased.qmd  brindise-2024-pointwiseintime.qmd  holtmann-2025-sailing.qmd  index.qmd  (+18 more)
projects/: index.qmd
publications/: behery-2023-actionable.qmd  bragantini-2021-neuralnetworkbased.qmd  brindise-2024-pointwiseintime.qmd  holtmann-2025-sailing.qmd  holzapfel-2024-ecladts-short.qmd  holzapfel-2025-ecladts.qmd  index.qmd  muller-2023-objectifying.qmd  otte-2020-holistic.qmd  otte-2022-condition.qmd  pelzer-2023-process.qmd  posada-moreno-2020-cargo.qmd  posada-moreno-2022-cargo.qmd  posada-moreno-2023-dataset-carbon.qmd  posada-moreno-2023-dataset-textiles.qmd  posada-moreno-2023-eclad.qmd  posada-moreno-2023-scalable.qmd  posada-moreno-2023-scalepreserving.qmd  posada-moreno-2024-concept-regularization.qmd  scheiderer-2020-simulationasaservice.qmd  scheiderer-2020-transfer.qmd  weber-2023-qualitaetsueberwachung.qmd  ziegler-2024-foundation.qmd
styles/: custom.scss
(+49 files in other folders)
