[project]
name = "andresfp14-website"
version = "2.0.0"
description = "Personal academic website of Andres Felipe Posada Moreno"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
